--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header {
     text-shadow: -30px 5px 20px var(--web-background-color), 90px 20px 50px var(--web-background-color);
 }
 
-.section-about {
+.section-wrapper {
     margin: auto;
 }
 
@@ -115,20 +115,46 @@ header {
 
 .section-footer {
     margin: auto;
+    margin-top: 100px;
+    margin-bottom: 200px;
 }
 
 .section-header-title {
-    font-size: 40px;
+    font-size: 1.5rem;
 }
 
 .section-content {
-    color: rgba(255, 255, 255, 0.61);
     margin: 3em 0.5em 3em;
+}
+
+.section-about-content {
+    color: rgba(255, 255, 255, 0.61);
     line-height: 1.5em;
 }
 
+.section-work-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+}
+
+.section-work-item {
+    overflow: hidden;
+}
+
+.section-work-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition: transform 400ms ease-out;
+}
+
+.section-work-img:hover {
+    transform: scale(1.15);
+	opacity: 0.8;
+}
+
 @media only screen and (min-width: 1600px) {
-    .nav-wrapper, .header-wrapper, .section-about {
+    .nav-wrapper, .header-wrapper, .section-wrapper {
         width: var(--xlarge-width);
     }
 
@@ -142,7 +168,7 @@ header {
 }
 
 @media only screen and (max-width: 1600px) and (min-width: 1199px) {
-    .nav-wrapper, .header-wrapper, .section-about {
+    .nav-wrapper, .header-wrapper, .section-wrapper {
         width: var(--large-width);
     }
 
@@ -156,7 +182,7 @@ header {
 }
 
 @media only screen and (max-width: 1199px) {
-    .nav-wrapper, .header-wrapper, .section-about {
+    .nav-wrapper, .header-wrapper, .section-wrapper {
         min-width: var(--small-width);
     }
 
