--- a/style.css
+++ b/style.css
@@ -209,6 +209,55 @@ header {
     width: 40%;
 }
 
+.section-blog-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 1em;
+    
+}
+
+.section-blog-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-blog-img {
+    width: 100%;
+    height: 90%;
+    transition: opacity 400ms ease-out;
+}
+
+div.section-blog-link {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+    left: 0px;
+    top: 0px;
+    transition: opacity 500ms ease-out, color 500ms ease-out;
+    opacity: 0;
+}
+
+div.section-blog-link:hover {
+    opacity: 0.9;
+}
+
+div.section-blog-link p {
+    padding: 5px;
+    color: rgba(255, 255, 255, 0.61);
+    border: 1px solid  rgba(255, 255, 255, 0.61);
+    border-radius: 3px;
+}
+
+.section-blog-img-title {
+    margin-top: 5px;
+    color:  rgba(255, 255, 255, 0.61);
+}
+
 
 @media only screen and (min-width: 1600px) {
     .nav-wrapper, .header-wrapper, .section-wrapper {
