--- a/style.css
+++ b/style.css
@@ -28,17 +28,14 @@ ul {
     text-transform: uppercase;
 }
 
-li {
+a {
     color: var(--nav-bar-text-color);
     font-size: var(--nav-bar-text-size);
 }
 
-li:hover {
+a:hover {
     transition: transform 0.3s ease-in-out;
     transform: scale(1.1);
-}
-
-a:hover {
     color: var(--nav-bar-text-color-hover);
 }
 
@@ -76,7 +73,7 @@ header {
     flex-flow: row wrap;
     align-content: center;
     margin: auto;
-    min-height: calc(40vh + 15vw)
+    min-height: calc(40vh + 10vw);
 }
 
 .header-word-wrapper {
@@ -89,6 +86,53 @@ header {
     color: #fff;
     text-shadow: -30px 5px 20px var(--web-background-color), 90px 20px 50px var(--web-background-color);
 }
+
+.icons-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.fa {
+    padding: 20px;
+    margin-left: 30px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+
+  .fa-github {
+    background: whitesmoke;
+    color: black;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+    
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
 
 .section-wrapper {
     margin: auto;
@@ -260,7 +304,7 @@ div.section-blog-link p {
 
 
 @media only screen and (min-width: 1600px) {
-    .nav-wrapper, .header-wrapper, .section-wrapper {
+    .nav-wrapper, .header-wrapper, .section-wrapper, .icons-wrapper {
         width: var(--xlarge-width);
     }
 
@@ -274,7 +318,7 @@ div.section-blog-link p {
 }
 
 @media only screen and (max-width: 1600px) and (min-width: 1199px) {
-    .nav-wrapper, .header-wrapper, .section-wrapper {
+    .nav-wrapper, .header-wrapper, .section-wrapper, .icons-wrapper {
         width: var(--large-width);
     }
 
@@ -288,7 +332,7 @@ div.section-blog-link p {
 }
 
 @media only screen and (max-width: 1199px) {
-    .nav-wrapper, .header-wrapper, .section-wrapper {
+    .nav-wrapper, .header-wrapper, .section-wrapper, .icons-wrapper {
         min-width: var(--small-width);
     }
 
