Change size of section skills bars

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     font-weight: 700;
     scroll-behavior: smooth;
     background-color: var(--web-background-color);
-    /* overflow-x: hidden; */
     
 }
 
@@ -214,11 +213,11 @@ header {
     width: 90%;
     color: rgba(255, 255, 255, 0.61);
     margin: auto;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .section-skills-item, .section-skills-line {
-    height: 30px;
+    height: 25px;
     border-radius: 10px;
     
 }
@@ -227,7 +226,7 @@ header {
     width: 90%;
     background-color: rgba(255, 255, 255, 0.61);
     margin: auto;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .section-skills-line {
@@ -473,5 +472,17 @@ input[type=text], textarea {
 
    .text-effect {
         font-size: 60px;
+    }
+
+    .section-skills-item {
+        margin-bottom: 20px;
+    }
+
+    .section-skills-name {
+        padding-bottom: 5px;
+    } 
+
+    .section-skills-item, .section-skills-line {
+        height: 20px;
     }
 }
