--- a/style.css
+++ b/style.css
@@ -435,13 +435,21 @@ input[type=text], textarea {
 }
 
 @media only screen and (max-width: 576px) {
+    .nav-wrapper, .header-wrapper, .section-wrapper, .icons-wrapper {
+        min-width: 300px;
+    }
+
+    * {
+        font-size: 20px;
+    }
+
     nav {
        bottom: 0;
        box-shadow: 0 0 0 3px rgba(148, 146, 146, 0.425);
     }
 
     .nav-wrapper {
-        height: 100px;
+        height: 70px;
     }
 
     .nav-container li {
@@ -462,7 +470,7 @@ input[type=text], textarea {
 
     a .nav-icon {
         display: block;
-        font-size: 50px;
+        font-size: 40px;
     }
 
    header {
@@ -470,12 +478,45 @@ input[type=text], textarea {
        width: 100%;
    }
 
+   .header-wrapper {
+        min-height: calc(20vh + 10vw);
+    }
+
    .text-effect {
-        font-size: 60px;
+        font-size: 40px;
+    }
+
+    a span {
+        font-size: 12px;
+    }
+
+    .section-content {
+        margin: 1em 0.5em 1em;
+    }
+
+    .section-footer {
+        margin: auto;
+        margin-top: 3em;
+        margin-bottom: 3em;
+    }
+
+    .section-header-line, .section-footer {
+        width: 5em;
     }
 
     .section-skills-item {
         margin-bottom: 20px;
+    }
+
+    .section-work-content, .section-blog-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+
+    a.fa {
+        font-size: 10px;
+        width: 10px;
+        margin-left: 10px;
     }
 
     .section-skills-name {
@@ -486,3 +527,5 @@ input[type=text], textarea {
         height: 20px;
     }
 }
+
+
