--- a/style.css
+++ b/style.css
@@ -117,26 +117,23 @@ header {
   100% {color: rgba(255, 255, 255, 1); top:0px;}
   }
 
-.text-effect:nth-child(2n) {
+.text-effect {
     position: relative;
     color: #fff;
     text-shadow: -30px 5px 20px var(--web-background-color), 90px 20px 50px var(--web-background-color);
+}
+
+.text-effect:nth-child(2n) {
     animation-name: header_animation_1;
     animation-duration: 4s;
 }
 
 .text-effect:nth-child(2n + 1) {
-    position: relative;
-    color: #fff;
-    text-shadow: -30px 5px 20px var(--web-background-color), 90px 20px 50px var(--web-background-color);
     animation-name: header_animation_2;
     animation-duration: 3s;
 }
 
 .text-effect:nth-child(3n + 1) {
-    position: relative;
-    color: #fff;
-    text-shadow: -30px 5px 20px var(--web-background-color), 90px 20px 50px var(--web-background-color);
     animation-name: header_animation_3;
     animation-duration: 2s;
 }
